kubernetes/ingress/apollo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "apollo-ingress"
  namespace: "apollo-federation-dev"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: apollo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "gateway-api-service"
              servicePort: 4000
